tests/negative/declare_diff_body.fc
// test: declare-with-different-body-test
// compile-fail: true
// exit-code: 1

int write(int _);
void exit(int _);

int foo(){
    return 97;
}

int foo(){
    return 98;
}

void main(){
    write(foo());
    exit(0);
}

